--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Adjust the overlay color and opacity as needed */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .banner-title {
@@ -61,4 +56,25 @@ a {
 
 a.active {
   border-bottom: 2px solid #000;
+}
+
+.custom-hover-bg {
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-hover-bg:hover {
+  background-color: #e7e7e7;
+}
+
+.comment-bg {
+  background-color: gray;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.dropdown-toggle::after {
+  display: none;
 }
